Remove terraform.tfvars from Git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ pip-wheel-metadata/
 *.tfstate
 *.tfstate.*
 crash.log
-terraform.tfvars            # keep secrets out of git
+infra/terraform.tfvars            # keep secrets out of git
 *.backup
 
 # ── AWS & local credentials ──────────────────────────────────────────
